--- a/app/src/main/res/layout/add_new_vehicle_fragment.xml
+++ b/app/src/main/res/layout/add_new_vehicle_fragment.xml
@@ -129,6 +129,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
+                    android:visibility="gone"
                     android:text="@string/chasis_number"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
@@ -137,6 +138,7 @@
                     android:id="@+id/add_new_chassis_number_txt"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:text="@={viewmodel.chassisNumber}"
                     app:textAllCaps="true"
                     android:inputType="textCapCharacters"
@@ -152,6 +154,33 @@
                     android:textColor="@color/white"
                     android:textCursorDrawable = "@null" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_16"
+                    android:text="@string/mobile_number"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/register_mobile_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@={viewmodel.phone}"
+                    android:inputType="number"
+                    android:singleLine="true"
+                    android:digits="1234567890+"
+                    android:maxLength="8"
+                    android:layout_marginTop="@dimen/margin_8"
+                    android:textDirection="locale"
+                    android:textAlignment="viewStart"
+                    android:textColorHint="@color/white"
+                    app:hintTextColor="@color/white"
+                    android:backgroundTint="@color/white"
+                    app:autoSizeTextType="uniform"
+                    android:textColorHighlight="@color/signUpHintText"
+                    android:textColor="@color/white"
+                    android:textCursorDrawable = "@null" />
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/add_new_get_model_year_btn"
                     android:layout_width="match_parent"
@@ -168,6 +197,7 @@
                     android:textAllCaps="false"
                     android:textSize="14sp"
                     android:textColor="@drawable/selector_button_text_blue"/>
+
 
                 <TextView
                     android:layout_width="wrap_content"
