--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -62,12 +62,14 @@
                     android:text="@string/plate_number"
                     android:layout_marginTop="@dimen/margin_16"
                     android:textColor="@color/white"
+                    android:visibility="gone"
                     android:textSize="16sp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_8"
+                    android:visibility="gone"
                     android:orientation="horizontal">
                     <androidx.appcompat.widget.AppCompatEditText
                         android:id="@+id/add_new_plate_number"
@@ -122,6 +124,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/margin_5dp"
+                    android:visibility="gone"
                     android:background="@color/white">
 
                 </View>
@@ -132,6 +135,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/chasis_number"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -184,6 +188,7 @@
                     android:layout_height="match_parent"
                     android:backgroundTint="@color/white"
                     android:inputType="textCapCharacters"
+                    android:visibility="gone"
                     android:singleLine="true"
                     android:text="@={viewmodel.chassisNumber}"
                     android:textAlignment="viewStart"
@@ -206,6 +211,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginStart="@dimen/margin_48"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/margin_8"
                     android:layout_marginEnd="@dimen/margin_48"
                     android:layout_marginBottom="@dimen/margin_8"
@@ -222,6 +228,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/model"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -242,6 +249,7 @@
                     android:backgroundTint="@color/white"
                     android:textColorHighlight="@color/signUpHintText"
                     android:textColor="@color/white"
+                    android:visibility="gone"
                     android:textCursorDrawable = "@null" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -276,6 +284,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/model_year"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -286,6 +295,7 @@
                     android:enabled="false"
                     android:inputType="text"
                     android:maxLength="17"
+                    android:visibility="gone"
                     android:singleLine="true"
                     app:autoSizeTextType="uniform"
                     android:layout_marginTop="@dimen/margin_8"
@@ -329,6 +339,32 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
+                    android:text="@string/customer_name"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"/>
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/register_name_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="@={viewmodel.name}"
+                    android:inputType="text"
+                    android:singleLine="true"
+                    app:autoSizeTextType="uniform"
+                    android:layout_marginTop="@dimen/margin_8"
+                    android:textDirection="locale"
+                    android:textAlignment="viewStart"
+                    android:textColorHint="@color/white"
+                    app:hintTextColor="@color/white"
+                    android:backgroundTint="@color/white"
+                    android:textColorHighlight="@color/signUpHintText"
+                    android:textColor="@color/white"
+                    android:textCursorDrawable = "@null" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/mobile"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
@@ -358,6 +394,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/telephone"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -365,6 +402,7 @@
                     android:id="@+id/register_telephone_txt"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:text="@={viewmodel.phone2}"
                     android:inputType="number"
                     android:singleLine="true"
@@ -406,37 +444,14 @@
                     android:textColor="@color/white"
                     android:textCursorDrawable = "@null" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_16"
-                    android:text="@string/customer_name"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"/>
 
-                <androidx.appcompat.widget.AppCompatEditText
-                    android:id="@+id/register_name_txt"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="@={viewmodel.name}"
-                    android:inputType="text"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    android:layout_marginTop="@dimen/margin_8"
-                    android:textDirection="locale"
-                    android:textAlignment="viewStart"
-                    android:textColorHint="@color/white"
-                    app:hintTextColor="@color/white"
-                    android:backgroundTint="@color/white"
-                    android:textColorHighlight="@color/signUpHintText"
-                    android:textColor="@color/white"
-                    android:textCursorDrawable = "@null" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/date_of_birth"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -444,6 +459,7 @@
                     android:id="@+id/register_dob_txt"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:visibility="gone"
                     android:text="@={viewmodel.dob}"
                     android:clickable="false"
                     android:cursorVisible="false"
@@ -466,6 +482,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_16"
                     android:text="@string/gender"
+                    android:visibility="gone"
                     android:textColor="@color/white"
                     android:textSize="16sp"/>
 
@@ -475,6 +492,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:enabled="false"
+                    android:visibility="gone"
                     android:layout_marginTop="@dimen/margin_8"
                     app:boxStrokeColor="@color/white"
                     app:endIconTint="@color/white"
