--- a/app/src/main/res/layout/splash_fragment.xml
+++ b/app/src/main/res/layout/splash_fragment.xml
@@ -8,18 +8,18 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/splashBg">
+        >
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="90dp"
-            android:layout_marginStart="64dp"
-            android:layout_marginEnd="64dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+           android:scaleType="centerCrop"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@id/splash_language_mainLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/app_icon_white_new" />
+            app:srcCompat="@drawable/landing_logo" />
 
         <LinearLayout
             android:id="@+id/splash_language_mainLayout"
